src/test/deca/syntax/invalid/decl_class/test_decl_class_with_public_class.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
// no viable alternative at input 'public'
// Historique:
//    cree le 01/01/2024

public class A {   
    int a;
}
